--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-date-picker": "^4.2.5",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
@@ -30,7 +31,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "@react-native-community/datetimepicker": "6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
