--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
@@ -16,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.2",
     "expo": "~46.0.16",
+    "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
     "nativewind": "^2.0.11",
@@ -25,14 +27,14 @@
     "react-native-date-picker": "^4.2.5",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-image-base64": "^0.1.4",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
-    "yup": "^0.32.11",
-    "@react-native-community/datetimepicker": "6.2.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
