--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "expo": "~46.0.16",
     "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.12.1",
     "formik": "^2.2.9",
     "nativewind": "^2.0.11",
     "react": "18.0.0",
@@ -27,7 +28,6 @@
     "react-native-date-picker": "^4.2.5",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-gesture-handler": "~2.5.0",
-    "react-native-image-base64": "^0.1.4",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
