--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,10 +28,11 @@
     "react-native-date-picker": "^4.2.5",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-progress": "^5.0.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
@@ -42,7 +43,6 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "@types/react-native-vector-icons": "^6.4.12",
-    "@types/uuid": "^8.3.4",
     "tailwindcss": "^3.2.1",
     "typescript": "~4.3.5"
   },
