--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,11 +28,14 @@
     "react-native-date-picker": "^4.2.5",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-gifted-charts": "^1.2.41",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-progress": "^5.0.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "^13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
