--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-native-gifted-charts": "^1.2.41",
     "react-native-progress": "^5.0.0",
     "react-native-ratings": "^8.1.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
