--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "firebase": "^9.12.1",
     "formik": "^2.2.9",
     "nativewind": "^2.0.11",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
