--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "6.2.0",
-    "@react-native-picker/picker": "2.4.2",
+    "@react-native-community/datetimepicker": "^6.2.0",
+    "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.2",
+    "@tanstack/react-query": "^4.14.5",
+    "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
@@ -27,9 +29,12 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-date-picker": "^4.2.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-element-dropdown": "^2.3.1",
+    "react-native-flipper": "^0.173.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-gifted-charts": "^1.2.41",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-progress": "^5.0.0",
     "react-native-ratings": "^8.1.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
@@ -40,12 +45,15 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
+    "react-query": "^3.39.2",
+    "react-query-native-devtools": "^4.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/react-native-datepicker": "^1.7.1",
     "@types/react-native-vector-icons": "^6.4.12",
     "tailwindcss": "^3.2.1",
     "typescript": "~4.3.5"
