--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-image-picker": "~13.3.1",
+    "expo-location": "~14.3.0",
     "expo-secure-store": "~11.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.12.1",
