--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react-native-element-dropdown": "^2.3.1",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-gifted-charts": "^1.2.41",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-maps": "^1.3.2",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-progress": "^5.0.0",
