--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
+    "node-cron": "^3.0.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
