--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,10 +25,12 @@
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.12.1",
     "formik": "^2.2.9",
+    "i18next": "^22.0.5",
     "nativewind": "^2.0.11",
     "radio-buttons-react-native": "^1.0.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-i18next": "^12.0.0",
     "react-native": "0.69.6",
     "react-native-date-picker": "^4.2.5",
     "react-native-datepicker": "^1.7.2",
