frontend: Installing expo notification and device packages

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "scheme": "com.asktheexpert.mobileapp",
     "userInterfaceStyle": "light | dark",
     "splash": {
       "image": "./assets/splash.png",
@@ -21,6 +22,8 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.asktheexpert.mobileapp",
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
