--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,10 @@
     "@tanstack/react-query": "^4.14.5",
     "axios": "^1.1.3",
     "expo": "~46.0.16",
+    "expo-device": "^5.0.0",
     "expo-image-picker": "~13.3.1",
     "expo-location": "~14.3.0",
+    "expo-notifications": "^0.17.0",
     "expo-secure-store": "~11.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.12.1",
