--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,10 @@
     "@tanstack/react-query": "^4.14.5",
     "axios": "^1.1.3",
     "expo": "~46.0.16",
-    "expo-device": "^5.0.0",
+    "expo-device": "~4.3.0",
     "expo-image-picker": "~13.3.1",
     "expo-location": "~14.3.0",
-    "expo-notifications": "^0.17.0",
+    "expo-notifications": "~0.16.1",
     "expo-secure-store": "~11.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.12.1",
@@ -40,7 +40,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-gifted-charts": "^1.2.41",
     "react-native-gifted-chat": "^1.0.4",
-    "react-native-maps": "^1.3.2",
+    "react-native-maps": "0.31.1",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-progress": "^5.0.0",
     "react-native-ratings": "^8.1.0",
