frontend: Altering imports names and installing react-native-alert-async package

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.0.0",
     "react-i18next": "^12.0.0",
     "react-native": "0.69.6",
+    "react-native-alert-async": "^1.0.5",
     "react-native-date-picker": "^4.2.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-element-dropdown": "^2.3.1",
