--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-gifted-charts": "^1.2.41",
     "react-native-gifted-chat": "^1.0.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "0.31.1",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-progress": "^5.0.0",
