--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.2",
     "@react-native-community/datetimepicker": "^6.2.0",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -20,10 +21,12 @@
     "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-device": "~4.3.0",
+    "expo-font": "~10.2.0",
     "expo-image-picker": "~13.3.1",
     "expo-location": "~14.3.0",
     "expo-notifications": "~0.16.1",
     "expo-secure-store": "~11.3.0",
+    "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.12.1",
     "formik": "^2.2.9",
@@ -41,6 +44,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-gifted-charts": "^1.2.41",
     "react-native-gifted-chat": "^1.0.4",
+    "react-native-global-props": "^1.1.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "0.31.1",
     "react-native-modal-datetime-picker": "^14.0.0",
@@ -62,6 +66,7 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "@types/react-native-datepicker": "^1.7.1",
+    "@types/react-native-global-props": "^1.1.2",
     "@types/react-native-vector-icons": "^6.4.12",
     "tailwindcss": "^3.2.1",
     "typescript": "~4.3.5"
