--- a/backend/package.json
+++ b/backend/package.json
@@ -22,12 +22,12 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.8.4"
   }
 }
